--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
+    height: 24%;
     background-color: #BBBBBB;
     padding: 20px 0 0;
     margin: 0;
@@ -57,9 +58,6 @@ body {
     height: 150px;
 }
 
-.caja a img {
-    top: 50px;
-}
 
 .caja .selecter a.active {
     border-color: #088c19;
@@ -781,7 +779,7 @@ th {
 .frame {
     margin: 2rem 2rem;
     width: 90%;
-    height: 280px;
+    height: 500px;
     border: 0;
 }
 
@@ -794,6 +792,7 @@ th {
     color: white;
     margin: 5px 0;
 }
+
 
 /*media queries for web responsive*/
 @media screen and (max-width: 820px) {
@@ -832,48 +831,71 @@ th {
 
     /* Haciendo el header responsive */
     header {
-        display: flex;
-        flex-direction: column;
-        padding: 10px 0;
+        padding: 5px 0;
+        height: 24%;
     }
 
     .caja {
         width: 100%;
-        margin: 0 auto;
-        height: 150px;
+        height: auto;
+        padding: 5px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .caja a {
+        width: 20%;
+    }
+
+    .caja nav {
+        top: 50%;
+        height: auto;
+        margin: 10px;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    nav ul li {
+        margin: 5px;
+        font-size: 50%;
+    }
+
+    nav ul li a {
+        font-size: 150%;
+        margin: .2rem;
     }
 
     .logo {
-        height: 100px;
-        width: 100px;
-        margin: 5%;
+        height: 80px;
+        width: 80px;
+        margin-right: 10px;
+        /* Reduce el margen derecho */
     }
 
-    nav {
-        top: 0px;
+    .logo,
+    nav ul {
         display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
+        /* Para que estén en la misma línea */
+        flex-direction: row;
+        align-items: center;
+        /* Alinear elementos verticalmente */
+
     }
 
-    li a {
-        padding: 10px;
-        border: solid 1px black;
-        border-radius: 10px;
-        margin: 2px;
-        color: black;
-        background-color: #BBBBBB;
-    }
-
-    ul {
-        display: flex;
-        flex-flow: column wrap;
+    body {
+        padding-top: 100px;
+        /* Ajustar según la nueva altura del header */
     }
 
     /* Banner responsive */
     .banner {
         width: 100%;
-        height: auto;
+        height: 90%;
     }
 
     /* Contenido principal responsive */
