--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 24%;
+    height: 50%;
     background-color: #BBBBBB;
     padding: 20px 0 0;
     margin: 0;
@@ -111,6 +111,7 @@ nav a:hover {
 /* CSS para nuestra pagina inicial*/
 
 .banner {
+    position: absolute;
     width: 100%;
     height: auto;
 }
@@ -795,7 +796,7 @@ th {
 
 
 /*media queries for web responsive*/
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 520px) {
     * {
         margin: 0;
     }
@@ -831,8 +832,9 @@ th {
 
     /* Haciendo el header responsive */
     header {
+        position: absolute;
         padding: 5px 0;
-        height: 24%;
+        height: 12%;
     }
 
     .caja {
@@ -843,14 +845,9 @@ th {
         align-items: center;
     }
 
-    .caja a {
-        width: 20%;
-    }
-
     .caja nav {
-        top: 50%;
-        height: auto;
-        margin: 10px;
+        display: flex;
+        top: 0px;
     }
 
     nav ul {
@@ -863,6 +860,7 @@ th {
     nav ul li {
         margin: 5px;
         font-size: 50%;
+        font-weight: bold;
     }
 
     nav ul li a {
@@ -870,11 +868,22 @@ th {
         margin: .2rem;
     }
 
+    nav li {
+        border: 1px solid #ccc;
+        padding: 10px;
+        text-align: center;
+        transition: background-color 0.3s;
+    }
+
     .logo {
         height: 80px;
         width: 80px;
         margin-right: 10px;
         /* Reduce el margen derecho */
+    }
+
+    .caja a img {
+        display: none;
     }
 
     .logo,
@@ -888,14 +897,9 @@ th {
     }
 
     body {
-        padding-top: 100px;
+        display: block;
+        padding-top: 15%;
         /* Ajustar según la nueva altura del header */
-    }
-
-    /* Banner responsive */
-    .banner {
-        width: 100%;
-        height: 90%;
     }
 
     /* Contenido principal responsive */
