--- a/css/style.css
+++ b/css/style.css
@@ -47,22 +47,25 @@ header {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+
+
 .caja {
-    width: 90%;
+    display: block;
+    width: 100%;
     position: relative;
     margin: 0 auto;
-    height: 150px;
+    height: 100%;
 }
 
 .caja .selecter a.active {
     border-color: #088c19;
 }
 
-.logo {
+.caja a img {
     display: block;
     cursor: pointer;
-    height: 150px;
-    width: 150px;
+    height: 130px;
+    width: 130px;
     margin: .5rem .5rem .5rem;
 }
 
@@ -77,7 +80,7 @@ nav li {
     margin: 0 0 0 15px;
 }
 
-nav a {
+nav ul li a {
     text-transform: uppercase;
     color: #000000;
     font-weight: bold;
@@ -88,7 +91,7 @@ nav a {
     padding: 1rem;
 }
 
-nav a:hover {
+nav ul li a:hover {
     color: #c78c19;
     text-decoration: underline;
 }
@@ -798,9 +801,8 @@ th {
     margin: 5px 0;
 }
 
-
-/*media queries for web responsive*/
-@media screen and (max-width: 820px) {
+/**** Comenzamos con responsive ******/
+@media screen and (max-width: 480px) {
     * {
         margin: 0;
     }
@@ -823,6 +825,7 @@ th {
         margin: 0;
         width: 100%;
         height: auto;
+        padding-top: 15%;
     }
 
     body {
@@ -831,288 +834,283 @@ th {
         /* Ajustar según la nueva altura del header */
     }
 
-    /* Haciendo el header responsive */
     header {
-        display: grid;
-        grid-template-columns: 25% 75%;
-        align-content: center;
-        height: 12%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
         width: 100%;
+        height: 50px;
     }
 
-    header img {
-        padding: 0 0 20px;
+
+  
+
+    .logo {
+        max-width: 60px;
     }
 
-    .nav a {
-        display: inline-block;
+    nav {
+        top: 0;
+    }
+
+    nav ul li a {
         text-transform: uppercase;
         color: #000000;
         font-weight: bold;
         font-size: 12px;
         text-decoration: none;
+        border: 2px solid;
+        border-radius: 5px;
+        padding: 1rem;
     }
 
-    .caja {
+    nav ul {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
         width: 100%;
-        height: auto;
-    }
-
-    nav {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 
     nav ul li {
-        text-align: center;
-        margin: 5px;
-        font-size: 50%;
-        font-weight: bold;
-        text-decoration: none;
-        color: black;
-        padding: 5px;
-    }
-
-    nav ul li a {
-        font-size: 150%;
+        width: 100%;
+        height: 10px;
         margin: .2rem;
-    }
-
-    .caja a {
-        background-size: contain;
-    }
-
-    .caja a img {
-
-        display: none;
-    }
-
-    .logo {
-        height: 80px;
-        width: 80px;
-        margin-right: 10px;
-        /* Reduce el margen derecho */
-    }
-
-
-
-    .logo,
-    nav ul {
-        display: flex;
-        /* Para que estén en la misma línea */
-        flex-direction: row;
-        align-items: center;
-        /* Alinear elementos verticalmente */
-
-    }
-
-    .principal {
-        width: 100%;
-        height: auto;
-    }
-
-    /* Contenido principal responsive */
-    .diferenciales {
-        padding: 2em 0;
-        width: 100%;
-    }
-
-    /* Lista de diferenciales en dispositivos pequeños */
-    .lista-diferenciales {
-        width: 80%;
-    }
-
-    /* Imágenes diferenciales en dispositivos pequeños */
-    .caja-diferenciales {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        align-content: center;
-        margin: 50px 0;
         gap: 10px;
     }
 
-    .imagen-diferenciales {
-        margin: 0 0 20px;
+    nav ul li a {
+        font-size: 12px;
+        padding: 6px 8px;
     }
+}
 
-    .main {
-        width: 100%;
-        height: auto;
-    }
+header div {
+    top: 100;
+}
 
-    /* Video responsive */
-    .video {
-        width: 100%;
-        margin: 1em 0;
-        display: flex;
-        justify-content: center;
-    }
+.caja {
+    min-width: 50%;
+    min-height: 50%;
 
-    .video .frame {
-        width: 300px;
-        height: 200px;
-    }
+}
 
-
-    .mapa .frame {
-        margin: 1rem 2rem;
-        width: 80%;
-    }
-
-    .sectionGrid {
-        width: 100%;
-        height: auto;
-    }
-
-
-    .productos {
-        display: flex;
-        flex-flow: column wrap;
-    }
-
-    .productos li {
-        width: auto;
-        vertical-align: top;
-        margin: 0 1.5%;
-        padding: 30px 0px;
-        box-sizing: border-box;
-        border: 2px solid #000000;
-        border-radius: 10px;
-    }
-
-
-
-    .container {
-        width: 75wh;
-        margin: 60px auto;
-        display: grid;
-        grid-template-columns:
-            repeat(4, 1fr);
-        grid-auto-rows: 140px;
-        gap: 2px;
-        padding: 0 0.5rem;
-        margin: 0.5rem 0;
-    }
-
-    .contenido {
-        height: 250px;
-        width: 95%;
-        position: relative;
-    }
-
-    .contenido .images {
-        height: 100%;
-        width: 100%;
-        margin: 20px 0;
-    }
-
-    .contenido .images img {
-        height: 100%;
-        width: 100%;
-        margin: 20px 0;
-    }
-
-    form div,
-    form legend {
+  .caja spam img {
         display: block;
-        width: 100%;
+    cursor: pointer;
+    height: 90%;
+    width: 8%;
+    margin: .5rem ;
     }
 
-    .label-datos {
-        display: block;
-    }
 
-    .input-padron {
-        display: block;
-        width: 80%;
-        padding: .8rem;
-        margin: .8rem;
-    }
+.principal {
+    width: 100%;
+    height: auto;
+}
 
-    small {
-        display: flex;
-        background-color: #e74d3c;
-        border-radius: .5rem;
-        padding: .5rem;
-        color: #FFF;
-        bottom: 0px;
-        left: 0px;
-        visibility: hidden;
-    }
+/* Contenido principal responsive */
+.diferenciales {
+    padding: 2em 0;
+    width: 100%;
+}
 
-    .caja-enviar {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+/* Lista de diferenciales en dispositivos pequeños */
+.lista-diferenciales {
+    width: 80%;
+}
 
-    .label-privacidad {
-        margin: 20px;
-    }
+/* Imágenes diferenciales en dispositivos pequeños */
+.caja-diferenciales {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    margin: 50px 0;
+    gap: 10px;
+}
 
-    .label-privacidad u {
-        color: blue;
-        margin: 20px;
-    }
+.imagen-diferenciales {
+    margin: 0 0 20px;
+}
 
-    .formularioF {
-        display: flex;
-        flex-direction: column;
-        padding: 10px;
-        border: solid 1px black;
-        margin: 15px;
-        border-radius: 15px;
-        width: auto;
-    }
+.main {
+    width: 100%;
+    height: auto;
+}
 
-    #enviar,
-    #borrar {
-        width: 80%;
-    }
+/* Video responsive */
+.video {
+    width: 100%;
+    margin: 1em 0;
+    display: flex;
+    justify-content: center;
+}
 
-    .table {
-        max-width: 80%;
-        width: 100%;
-        margin: 40px 40px 0px 9%;
-    }
+.video .frame {
+    width: 300px;
+    height: 200px;
+}
 
-    .mapa button {
-        width: 25%;
-    }
 
-    .mapa p {
-        margin: 5% 5%;
-    }
+.mapa .frame {
+    margin: 1rem 2rem;
+    width: 80%;
+}
 
-    #noticias {
-        width: 90%;
-        border-radius: 5px;
-    }
+.sectionGrid {
+    width: 100%;
+    height: auto;
+}
 
-    .noticia {
-        display: flex;
-        flex-direction: column-reverse;
-        width: 95%;
-        height: 95%;
-        margin-bottom: 20px;
-        background-color: #fff;
-        border-radius: 5px;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    }
 
-    .imagen-noticia {
-        width: 95%;
-        height: 95%;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-    }
+.productos {
+    display: flex;
+    flex-flow: column wrap;
+}
 
-    .imagen-noticia img {
-        width: 300px;
-        height: 450px;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        padding-bottom: 10px;
-    }
+.productos li {
+    width: auto;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 0px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+
+
+
+.container {
+    width: 75wh;
+    margin: 60px auto;
+    display: grid;
+    grid-template-columns:
+        repeat(4, 1fr);
+    grid-auto-rows: 140px;
+    gap: 2px;
+    padding: 0 0.5rem;
+    margin: 0.5rem 0;
+}
+
+.contenido {
+    height: 250px;
+    width: 95%;
+    position: relative;
+}
+
+.contenido .images {
+    height: 100%;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.contenido .images img {
+    height: 100%;
+    width: 100%;
+    margin: 20px 0;
+}
+
+form div,
+form legend {
+    display: block;
+    width: 100%;
+}
+
+.label-datos {
+    display: block;
+}
+
+.input-padron {
+    display: block;
+    width: 80%;
+    padding: .8rem;
+    margin: .8rem;
+}
+
+small {
+    display: flex;
+    background-color: #e74d3c;
+    border-radius: .5rem;
+    padding: .5rem;
+    color: #FFF;
+    bottom: 0px;
+    left: 0px;
+    visibility: hidden;
+}
+
+.caja-enviar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.label-privacidad {
+    margin: 20px;
+}
+
+.label-privacidad u {
+    color: blue;
+    margin: 20px;
+}
+
+.formularioF {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border: solid 1px black;
+    margin: 15px;
+    border-radius: 15px;
+    width: auto;
+}
+
+#enviar,
+#borrar {
+    width: 80%;
+}
+
+.table {
+    max-width: 80%;
+    width: 100%;
+    margin: 40px 40px 0px 9%;
+}
+
+.mapa button {
+    width: 25%;
+}
+
+.mapa p {
+    margin: 5% 5%;
+}
+
+#noticias {
+    width: 90%;
+    border-radius: 5px;
+}
+
+.noticia {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 95%;
+    height: 95%;
+    margin-bottom: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.imagen-noticia {
+    width: 95%;
+    height: 95%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.imagen-noticia img {
+    width: 300px;
+    height: 450px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding-bottom: 10px;
+}
 }
