--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -1,219 +1,224 @@
 <!DOCTYPE html>
-
 <html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto - Barbería ByAlex</title>
+  <title>Barbería ByAlex</title>
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
-  <!-- CDN icon link-->
+  <!-- Fuente de texto -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <!-- Link iconos CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
-<body>
-  <!-- Iniciamos la barra de navegación -->
-  <header>
-    <div class="caja">
-      <a href="#">
-        <img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
-      </a>
-      <nav>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a id="selected" href="presupuesto.html">Contacto</a></li>
-          <li><a href="contacto.html">Ubicación</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<!-- Iniciamos el encabezado -->
+<header>
+  <div class="caja">
+    <spam href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
+    </spam>
+    <nav> <!-- Agregamos la barra de navegación -->
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fa-solid fa-bars"></i>
+      </label>
 
-  <div class="formulario">
-    <!-- Iniciamos con el formulario -->
-    <main class="main-contacto">
-      <form id="form" name="form" method="post" action="procesar.php">
-        <fieldset class="formularioF">
-          <legend class="titulo-form">Datos Personales</legend>
-          <div>
-            <label class="label-datos" for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="text" class="input-padron" placeholder="Escriba aquí su nombre">
-            <small>Error mensaje</small>
-          </div>
-          <div>
-            <label class="label-datos" for="apellido">Apellidos</label>
-            <input type="text" id="apellido" name="apellido" class="input-padron"
-              placeholder="Escriba aquí su Apellido">
-            <small>Error mensaje</small>
-          </div>
-          <div>
-            <label class="label-datos" for="telefono">Teléfono de contacto</label>
-            <input type="tel" id="telefono" name="telefono" class="input-padron"
-              placeholder="Escriba aquí su teléfono de contacto">
-            <small>Error mensaje</small>
-          </div>
-          <div>
-            <label class="label-datos" for="email">Email</label>
-            <input type="email" id="email" name="email" class="input-padron"
-              placeholder="Escriba aquí su dirección de correo electrónico">
-            <small>Error mensaje</small>
-          </div>
-        </fieldset>
-
-        <fieldset class="formularioF">
-          <legend class="titulo-form">Presupuesto</legend>
-          <div>
-            <label>Elija un producto</label>
-            <select id="categoria" name="categoria" required>
-              <option value="" disabled selected>Seleccione el tipo de corte</option>
-              <option value="clasico">Clásico - €20</option>
-              <option value="degrado">Degradado - €25</option>
-              <option value="skin">Skin Fade - €30</option>
-            </select>
-          </div>
-          <div class="plazo-precio">
-            <label for="plazo">Plazo de entrega (días)</label>
-            <input type="number" class="input-text" id="plazo" name="plazo" min="1" required>
-          </div>
-          <div class="div-extra">
-            <label>Opciones extra:</label>
-            <div >
-              <input type="checkbox" id="barba" name="extras" value="barba">
-              <label for="barba">Arreglo de barba - €5</label>
-            </div>
-            <div>
-              <input type="checkbox" id="shampoo" name="extras" value="shampoo">
-              <label for="shampoo">Lavado con shampoo especial - €3</label>
-            </div>
-            <div>
-              <input type="checkbox" id="masaje" name="extras" value="masaje">
-              <label for="masaje">Masaje capilar - €7</label>
-            </div>
-          </div>
-          <div>
-            <label for="precioF">Presupuesto final</label>
-            <input type="text" class="input-text" id="precioF" name="precioF" readonly>
-          </div>
-        </fieldset>
-
-        <fieldset class="formularioF">
-          <legend class="titulo-form">Aceptación condiciones y envío de presupuesto</legend>
-          <fieldset>
-            <legend>¿Cómo le gustaría que lo contactemos?</legend>
-            <div>
-              <input type="radio" name="contacto" value="email" id="radio-email">
-              <label for="radio-email">Email</label>
-            </div>
-            <div>
-              <input type="radio" name="contacto" value="telefono" id="radio-telefono">
-              <label for="radio-telefono">Teléfono</label>
-            </div>
-            <div>
-              <input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp" checked>
-              <label for="radio-whatsapp">Whatsapp</label>
-            </div>
-          </fieldset>
-
-          <fieldset>
-            <legend>¿En cuál horario prefiere ser atendido?</legend>
-            <select>
-              <option>Mañana</option>
-              <option>Tarde</option>
-              <option>Noche</option>
-            </select>
-          </fieldset>
-
-          <div class="checkbox">
-            <input type="checkbox">
-            <label>¿Le gustaría recibir novedades de la Barbería ByAlex?</label>
-          </div>
-          <div class="checkbox">
-            <input type="checkbox" id="privacidad" name="privacidad">
-            <label class="label-privacidad" for="privacidad"> He leído y acepto la <u>Política de privacidad</u> </label>
-            <small>Error mensaje</small>
-          </div>
-          <!-- Agregamos el botón de enviar -->
-          <div class="caja-enviar">
-            <input type="submit" value="Enviar" id="enviar">
-            <input type="reset" value="Borrar" id="borrar">
-          </div>
-          <div>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Día</th>
-                  <th>Horario</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Lunes</td>
-                  <td>08h ~ 20h</td>
-                </tr>
-                <tr>
-                  <td>Miércoles</td>
-                  <td>08h ~ 20h</td>
-                </tr>
-                <tr>
-                  <td>Viernes</td>
-                  <td>08h ~ 20h</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </fieldset>
-      </form>
-    </main>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../views/productos.html">Productos</a></li>
+        <li><a id="selected" href="#">Contacto</a></li>
+        <li><a href="../views/contacto.html">Ubicación</a></li>
+      </ul>
+    </nav>
   </div>
+</header>
 
-  <!-- El pie de página -->
-  <footer class="footer" id="contact">
-    <div class="box-container">
-      <div class="content">
-        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
-        <h1 class="logoName">ByAlex BarberShop</h1>
-      </div>
-      <div class="box">
-        <h3>Quick link</h3>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-      </div>
-      <div class="box">
-        <h3>Extra link</h3>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-      </div>
-      <div class="box">
-        <h3>Contact Info</h3>
-        <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
-        <a href="#">
-          <i class="fas fa-envelope"></i>ByAlex@gmail.x</a>
-        <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-          <i class="fa-regular fa-map"></i>Ubicación:
-          Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+<div class="formulario">
+  <!-- Iniciamos con el formulario -->
+  <main class="main-contacto">
+    <form id="form" name="form" method="post" action="procesar.php">
+      <fieldset class="formularioF">
+        <legend class="titulo-form">Datos Personales</legend>
+        <div>
+          <label class="label-datos" for="nombre">Nombre</label>
+          <input type="text" id="nombre" name="text" class="input-padron" placeholder="Escriba aquí su nombre">
+          <small>Error mensaje</small>
+        </div>
+        <div>
+          <label class="label-datos" for="apellido">Apellidos</label>
+          <input type="text" id="apellido" name="apellido" class="input-padron" placeholder="Escriba aquí su Apellido">
+          <small>Error mensaje</small>
+        </div>
+        <div>
+          <label class="label-datos" for="telefono">Teléfono de contacto</label>
+          <input type="tel" id="telefono" name="telefono" class="input-padron"
+            placeholder="Escriba aquí su teléfono de contacto">
+          <small>Error mensaje</small>
+        </div>
+        <div>
+          <label class="label-datos" for="email">Email</label>
+          <input type="email" id="email" name="email" class="input-padron"
+            placeholder="Escriba aquí su dirección de correo electrónico">
+          <small>Error mensaje</small>
+        </div>
+      </fieldset>
 
-      </div>
+      <fieldset class="formularioF">
+        <legend class="titulo-form">Presupuesto</legend>
+        <div>
+          <label>Elija un producto</label>
+          <select id="categoria" name="categoria" required>
+            <option value="" disabled selected>Seleccione el tipo de corte</option>
+            <option value="clasico">Clásico - €20</option>
+            <option value="degrado">Degradado - €25</option>
+            <option value="skin">Skin Fade - €30</option>
+          </select>
+        </div>
+        <div class="plazo-precio">
+          <label for="plazo">Plazo de entrega (días)</label>
+          <input type="number" class="input-text" id="plazo" name="plazo" min="1" required>
+        </div>
+        <div class="div-extra">
+          <label>Opciones extra:</label>
+          <div>
+            <input type="checkbox" id="barba" name="extras" value="barba">
+            <label for="barba">Arreglo de barba - €5</label>
+          </div>
+          <div>
+            <input type="checkbox" id="shampoo" name="extras" value="shampoo">
+            <label for="shampoo">Lavado con shampoo especial - €3</label>
+          </div>
+          <div>
+            <input type="checkbox" id="masaje" name="extras" value="masaje">
+            <label for="masaje">Masaje capilar - €7</label>
+          </div>
+        </div>
+        <div>
+          <label for="precioF">Presupuesto final</label>
+          <input type="text" class="input-text" id="precioF" name="precioF" readonly>
+        </div>
+      </fieldset>
+
+      <fieldset class="formularioF">
+        <legend class="titulo-form">Aceptación condiciones y envío de presupuesto</legend>
+        <fieldset>
+          <legend>¿Cómo le gustaría que lo contactemos?</legend>
+          <div>
+            <input type="radio" name="contacto" value="email" id="radio-email">
+            <label for="radio-email">Email</label>
+          </div>
+          <div>
+            <input type="radio" name="contacto" value="telefono" id="radio-telefono">
+            <label for="radio-telefono">Teléfono</label>
+          </div>
+          <div>
+            <input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp" checked>
+            <label for="radio-whatsapp">Whatsapp</label>
+          </div>
+        </fieldset>
+
+        <fieldset>
+          <legend>¿En cuál horario prefiere ser atendido?</legend>
+          <select>
+            <option>Mañana</option>
+            <option>Tarde</option>
+            <option>Noche</option>
+          </select>
+        </fieldset>
+
+        <div class="checkbox">
+          <input type="checkbox">
+          <label>¿Le gustaría recibir novedades de la Barbería ByAlex?</label>
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" id="privacidad" name="privacidad">
+          <label class="label-privacidad" for="privacidad"> He leído y acepto la <u>Política de privacidad</u>
+          </label>
+          <small>Error mensaje</small>
+        </div>
+        <!-- Agregamos el botón de enviar -->
+        <div class="caja-enviar">
+          <input type="submit" value="Enviar" id="enviar">
+          <input type="reset" value="Borrar" id="borrar">
+        </div>
+        <div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Día</th>
+                <th>Horario</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Lunes</td>
+                <td>08h ~ 20h</td>
+              </tr>
+              <tr>
+                <td>Miércoles</td>
+                <td>08h ~ 20h</td>
+              </tr>
+              <tr>
+                <td>Viernes</td>
+                <td>08h ~ 20h</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </fieldset>
+    </form>
+  </main>
+</div>
+
+<!-- El pie de página -->
+<footer class="footer" id="contact">
+  <div class="box-container">
+    <div class="content">
+      <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
+      <h1 class="logoName">ByAlex BarberShop</h1>
     </div>
-    <div class="share">
-      <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
-      <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
-      <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
-      <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
-      <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
+    <div class="box">
+      <h3>Quick link</h3>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
     </div>
-    <div class="credit">
-      © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
+    <div class="box">
+      <h3>Extra link</h3>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+      <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
     </div>
-  </footer>
-  <script src="../js/validar.js"></script>
+    <div class="box">
+      <h3>Contact Info</h3>
+      <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
+      <a href="#">
+        <i class="fas fa-envelope"></i>ByAlex@gmail.x</a>
+      <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
+        <i class="fa-regular fa-map"></i>Ubicación:
+        Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+
+    </div>
+  </div>
+  <div class="share">
+    <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+    <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+    <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+    <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+    <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
+  </div>
+  <div class="credit">
+    © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
+  </div>
+</footer>
+<script src="../js/validar.js"></script>
 </body>
 
 </html>
