--- a/views/productos.html
+++ b/views/productos.html
@@ -1,140 +1,144 @@
 <!DOCTYPE html>
-
 <html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width">
-  <title>Produtos - Barbería ByAlex</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Barbería ByAlex</title>
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
-  <!-- link iconos CSS-->
+  <!-- Fuente de texto -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <!-- Link iconos CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-<!-- Iniciamos con la barra de navegación-->
-<header>
-  <div class="caja">
-    <a href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></a>
-    <nav>
-      <ul>
-        <li>
-          <a href=" ../index.html">Home</a>
-        </li>
-        <li>
-          <a id="selected" href="productos.html">Productos</a>
-        </li>
-        <li>
-          <a href="presupuesto.html">Contacto</a>
-        </li>
-        <li><a href="contacto.html">Ubicación</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</header>
-<!-- Agregamos los productos que ofrecemos-->
-<main>
-  <h2 class="titulo-principal">Productos</h2>
-  <ul class="productos">
-    <li>
-      <h2>Cabello</h2>
-      <img src="../imagenes/cabello.jpg" width="250" height="250" alt="FotoCabello">
-      <p class="producto-descripcion">
-        Con tijera o máquina, a gusto del cliente
-      </p>
-      <p class="producto-precio">$ 10.00</p>
-    </li>
-    <li>
-      <h2>Barba</h2>
-      <img src="../imagenes/barba.jpg" width="250" height="250" alt="FotoBarba">
-      <p class="producto-descripcion">
-        Corte y diseño profesional de barba
-      </p>
-      <p class="producto-precio">$ 08.00</p>
-    </li>
-    <li>
-      <h2>Cabello + Barba</h2>
-      <img src="../imagenes/cabello+barba.jpg" width="250" height="250" alt="FotCabello+Barba">
-      <p class="producto-descripcion">
-        Paquete completo de cabello y barba
-      </p>
-      <p class="producto-precio">$ 15.00</p>
-    </li>
-  </ul>
 
-  <h2 class="titulo-principal">Extras</h2>
-  <section class="sectionGrid">
-    <div class="contenido">
-      <div class="images">
-        <img class="galeria" src="../imagenes/barba1.jpg" alt="barba1">
-        <img class="galeria" src="../imagenes/barba2.jpg" alt="barba2">
-        <img class="galeria" src="../imagenes/extras1.jpg" alt="extras1">
-        <img class="galeria" src="../imagenes/extras2.jpg" alt="extras2">
-        <img class="galeria" src="../imagenes/masaje1.jpg" alt="masaje1">
-        <img class="galeria" src="../imagenes/masaje2.jpg" alt="masaje2">
+<body>
+  <!-- Iniciamos el encabezado -->
+  <header>
+    <div class="caja">
+      <spam href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
+      </spam>
+      <nav> <!-- Agregamos la barra de navegación -->
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a id="selected" href="#">Productos</a></li>
+          <li><a href="../views/presupuesto.html">Contacto</a></li>
+          <li><a href="../views/contacto.html">Ubicación</a></li>
+        </ul>
+      </nav>
+    </div>
+
+  </header>
+  <!-- Agregamos los productos que ofrecemos-->
+  <main>
+    <h2 class="titulo-principal">Productos</h2>
+    <ul class="productos">
+      <li>
+        <h2>Cabello</h2>
+        <img src="../imagenes/cabello.jpg" width="250" height="250" alt="FotoCabello">
+        <p class="producto-descripcion">
+          Con tijera o máquina, a gusto del cliente
+        </p>
+        <p class="producto-precio">$ 10.00</p>
+      </li>
+      <li>
+        <h2>Barba</h2>
+        <img src="../imagenes/barba.jpg" width="250" height="250" alt="FotoBarba">
+        <p class="producto-descripcion">
+          Corte y diseño profesional de barba
+        </p>
+        <p class="producto-precio">$ 08.00</p>
+      </li>
+      <li>
+        <h2>Cabello + Barba</h2>
+        <img src="../imagenes/cabello+barba.jpg" width="250" height="250" alt="FotCabello+Barba">
+        <p class="producto-descripcion">
+          Paquete completo de cabello y barba
+        </p>
+        <p class="producto-precio">$ 15.00</p>
+      </li>
+    </ul>
+
+    <h2 class="titulo-principal">Extras</h2>
+    <section class="sectionGrid">
+      <div class="contenido">
+        <div class="images">
+          <img class="galeria" src="../imagenes/barba1.jpg" alt="barba1">
+          <img class="galeria" src="../imagenes/barba2.jpg" alt="barba2">
+          <img class="galeria" src="../imagenes/extras1.jpg" alt="extras1">
+          <img class="galeria" src="../imagenes/extras2.jpg" alt="extras2">
+          <img class="galeria" src="../imagenes/masaje1.jpg" alt="masaje1">
+          <img class="galeria" src="../imagenes/masaje2.jpg" alt="masaje2">
+        </div>
+      </div>
+    </section>
+
+    <h2 class="titulo-principal">Galería Barbería ByAlex</h2>
+    <div class="container">
+      <div class="img-grid"></div>
+      <div class="img-grid"></div>
+      <div class="img-grid"></div>
+      <div class="img-grid"></div>
+      <div class="img-grid"></div>
+      <div class="img-grid"></div>
+      <div class="img-grid"></div>
+    </div>
+
+  </main>
+  <!-- El pie de página -->
+  <footer class=" footer" id="contact">
+    <div class="box-container">
+      <div class="content">
+        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
+        <h1 class="logoName">ByAlex BarberShop</h1>
+      </div>
+      <div class="box">
+        <h3>Quick link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+      </div>
+      <div class="box">
+        <h3>Extra link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+      </div>
+      <div class="box">
+        <h3>Contact Info</h3>
+        <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
+        <a href="#">
+          <i class="fas fa-envelope"></i>ByAlex@gmail.com</a>
+        <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
+          <i class="fa-regular fa-map"></i>Ubicación:
+          Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+
       </div>
     </div>
-  </section>
-
-  <h2 class="titulo-principal">Galería Barbería ByAlex</h2>
-  <div class="container">
-    <div class="img-grid"></div>
-    <div class="img-grid"></div>
-    <div class="img-grid"></div>
-    <div class="img-grid"></div>
-    <div class="img-grid"></div>
-    <div class="img-grid"></div>
-    <div class="img-grid"></div>
-  </div>
-
-</main>
-<!-- El pie de página -->
-<footer class=" footer" id="contact">
-  <div class="box-container">
-    <div class="content">
-      <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
-      <h1 class="logoName">ByAlex BarberShop</h1>
+    <div class="share">
+      <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+      <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+      <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+      <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+      <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
     </div>
-    <div class="box">
-      <h3>Quick link</h3>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+    <div class="credit">
+      © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
     </div>
-    <div class="box">
-      <h3>Extra link</h3>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-      <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-    </div>
-    <div class="box">
-      <h3>Contact Info</h3>
-      <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
-      <a href="#">
-        <i class="fas fa-envelope"></i>ByAlex@gmail.com</a>
-      <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-        <i class="fa-regular fa-map"></i>Ubicación:
-        Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
-
-    </div>
-  </div>
-  <div class="share">
-    <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
-    <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
-    <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
-    <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
-    <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
-  </div>
-  <div class="credit">
-    © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
-  </div>
-</footer>
-<script src="../js/slider.js"></script>
+  </footer>
+  <script src="../js/slider.js"></script>
 </body>
 
 
