--- a/views/contacto.html
+++ b/views/contacto.html
@@ -33,7 +33,7 @@
                     <i class="fa-solid fa-bars"></i>
                 </label>
 
-                <ul>
+                <ul class="ul-header">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../views/productos.html">Productos</a></li>
                     <li><a href="../views/presupuesto.html">Contacto</a></li>
