--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -26,7 +26,7 @@
         <i class="fa-solid fa-bars"></i>
       </label>
 
-      <ul>
+      <ul class="ul-header">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../views/productos.html">Productos</a></li>
         <li><a id="selected" href="#">Contacto</a></li>
