--- a/views/productos.html
+++ b/views/productos.html
@@ -27,7 +27,7 @@
           <i class="fa-solid fa-bars"></i>
         </label>
 
-        <ul>
+        <ul class="ul-header">
           <li><a href="../index.html">Home</a></li>
           <li><a id="selected" href="#">Productos</a></li>
           <li><a href="../views/presupuesto.html">Contacto</a></li>
