--- a/views/contacto.html
+++ b/views/contacto.html
@@ -26,6 +26,9 @@
             <div href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería"
                     class="logo">
             </div>
+            <div class="titulo-h1">
+                <a>BARBERÍA BYALEX</a>
+            </div>
             <nav>
                 <!-- Agregamos la barra de navegación -->
                 <input type="checkbox" id="check">
