--- a/views/productos.html
+++ b/views/productos.html
@@ -21,6 +21,9 @@
     <div class="caja">
       <div href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
       </div>
+      <div class="titulo-h1">
+        <a>BARBERÍA BYALEX</a>
+      </div>
       <nav> <!-- Agregamos la barra de navegación -->
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
