--- a/views/contacto.html
+++ b/views/contacto.html
@@ -24,7 +24,7 @@
     <!-- Iniciamos el encabezado -->
     <header>
         <div class="caja">
-            <div href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería"
+            <div><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería"
                     class="logo">
             </div>
             <div class="titulo-h1">
