--- a/views/productos.html
+++ b/views/productos.html
@@ -20,7 +20,7 @@
   <!-- Iniciamos el encabezado -->
   <header>
     <div class="caja">
-      <div><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
+      <div><img src="../imagenes/logo.png" width="11620" height="4865" alt="Logo de la Barbería" class="logo">
       </div>
       <div class="titulo-h1">
         <a>BARBERÍA BYALEX</a>
@@ -75,12 +75,12 @@
     <section class="sectionGrid">
       <div class="contenido">
         <div class="images">
-          <img class="galeria" src="../imagenes/barba1.jpg" alt="barba1">
-          <img class="galeria" src="../imagenes/barba2.jpg" alt="barba2">
-          <img class="galeria" src="../imagenes/extras1.jpg" alt="extras1">
-          <img class="galeria" src="../imagenes/extras2.jpg" alt="extras2">
-          <img class="galeria" src="../imagenes/masaje1.jpg" alt="masaje1">
-          <img class="galeria" src="../imagenes/masaje2.jpg" alt="masaje2">
+          <img class="galeria" src="../imagenes/barba1.jpg" width="540" height="610" alt="barba1">
+          <img class="galeria" src="../imagenes/barba2.jpg" width="1280" height="720" alt="barba2">
+          <img class="galeria" src="../imagenes/extras1.jpg" width="2000" height="1125" alt="extras1">
+          <img class="galeria" src="../imagenes/extras2.jpg" width="800" height="800" alt="extras2">
+          <img class="galeria" src="../imagenes/masaje1.jpg" width="768" height="512" alt="masaje1">
+          <img class="galeria" src="../imagenes/masaje2.jpg" width="253" height="200" alt="masaje2">
         </div>
       </div>
     </section>
