--- a/css/style.css
+++ b/css/style.css
@@ -192,14 +192,9 @@ nav ul li a:hover {
 
 }
 
-.contenido-diferenciales {
-    width: 100%;
-    margin: 0 auto;
-}
 
 .lista-diferenciales {
     margin-left: 15%;
-    width: 80%;
     display: inline-block;
     vertical-align: top;
 }
@@ -232,10 +227,17 @@ nav ul li a:hover {
     gap: 20px;
 }
 
+.contenido-diferenciales {
+    width: 100%;
+    align-items: center;
+}
+
 .imagen-diferenciales {
+    height: 18em;
+    width: 16em;
     transition: 400ms;
     box-shadow: 10px 10px 30px 15px #d6981c, -10px -10px 30px 15px #d6981c;
-    margin: 0 0 0 50px;
+    margin: 0 0 1em;
 }
 
 /*Agregamos el hover para dar un mejor aspecto al trasladar el cursor por encima*/
@@ -528,6 +530,15 @@ nav ul li a:hover {
     margin: 2rem 0;
 }
 
+.div-descuento ol {
+    list-style-type: circle;
+    font-size: 1em;
+    color: #333333a7;
+    padding: 5px;
+    border-radius: 3px;
+    margin-left: 5%;
+}
+
 
 .plazo-precio {
     display: inline;
@@ -599,6 +610,14 @@ form legend {
     margin: 10px;
     width: 60%;
 }
+
+#descuentoInfo {
+    display: block;
+    margin-top: 10px;
+    font-size: 1em;
+    color: green;
+}
+
 
 
 
@@ -880,7 +899,7 @@ th {
         flex-direction: row;
         align-items: flex-start;
         width: 100%;
-        height: 12%;
+        height: 13%;
     }
 
     .logo {
@@ -892,7 +911,7 @@ th {
         flex-direction: column;
         align-items: flex-end;
         height: 100%;
-        top: -50px;     
+        top: -50px;
     }
 
     .ul-header li a {
@@ -982,23 +1001,11 @@ th {
         width: 100%;
     }
 
-    /* Lista de diferenciales en dispositivos pequeños */
-    .lista-diferenciales {
-        width: 80%;
-    }
 
     /* Imágenes diferenciales en dispositivos pequeños */
     .caja-diferenciales {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        align-content: center;
         margin: 50px 0;
-        gap: 10px;
-    }
-
-    .imagen-diferenciales {
-        margin: 0 0 20px;
+        gap: 3rem;
     }
 
     .main {
