--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -19,7 +19,7 @@
 <!-- Iniciamos el encabezado -->
 <header>
   <div class="caja">
-    <div><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
+    <div><img src="../imagenes/logo.png" width="11620" height="4865" alt="Logo de la Barbería" class="logo">
     </div>
     <div class="titulo-h1">
       <a>BARBERÍA BYALEX</a>
@@ -84,6 +84,13 @@
         <div class="plazo-precio">
           <label for="plazo">Plazo de entrega (días)</label>
           <input type="number" class="input-text" id="plazo" name="plazo" min="1" required>
+        </div>
+        <div class="div-descuento">
+          <ol type=”A”>
+            <li>5% de descuento para entregas dentro de 30 días</li>
+            <li>10% de descuento para entregas dentro de 60 días</li>
+            <li>15% de descuento para entregas más allá de 60 días</li>
+          </ol>
         </div>
         <div class="div-extra">
           <label>Opciones extra:</label>
